# littlewood-poly-root-counter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindMPSolve.cmake
lib/: .gitignore
src/: #main.cpp#  .#program_find_roots.cpp  aberth_method.cpp  main.cpp  match_tester.cpp  poly_solver.cpp  program_count_ones.cpp  program_count_roots.cpp  program_find_roots.cpp  qr_algorithm.cpp  solver.cpp  unit_tests.cpp  utils.cpp
